--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,10 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.android.gms:play-services-plus:15.0.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-auth:15.0.0'
+    implementation 'com.google.firebase:firebase-auth:15.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.google.firebase:firebase-auth:15.0.0'
-    compile 'com.google.android.gms:play-services-auth:15.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
